build_out_processors.txt
Processing volvo_A60H_bruder (platform: espressif32@6.7.0; board: esp32dev; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32dev.html
PLATFORM: Espressif 32 (6.7.0) > Espressif ESP32 Dev Module
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20016.0 (2.0.16) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - toolchain-xtensa-esp32 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 40 compatible libraries
Scanning dependencies...
Dependency Graph
|-- PS4_Controller_Host @ 1.1.1+sha.b58a05d
|-- common_defs @ 0.0.0+20260315160858.sha.45b8759
|-- PwmBroker @ 1.0.0+sha.ae043d5
|-- DcMotorCore @ 1.0.0+sha.b23fa87
|-- ServoCore @ 0.1.0+sha.93bbcad
|-- statusLED @ 1.0.0-fork
Building in release mode
Compiling C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\src\machines\config\machines\volvo_A60H_bruder\inputs_map\ctrl_config.cpp.o
Archiving C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\lib992\libPwmBroker.a
Archiving C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\lib421\libDcMotorCore.a
Archiving C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\libbcf\libServoCore.a
Archiving C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\lib252\libstatusLED.a
C:\Users\Arnaud\.platformio\penv\Scripts\pio.exe : src/machines/config/machines
/volvo_A60H_bruder/inputs_map/ctrl_config.cpp:63:1: error: 'talComBusID' has 
not been declared
Au caractère Ligne:1 : 92
+ ...  RC Core" ; C:\Users\Arnaud\.platformio\penv\Scripts\pio.exe run -e v ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (src/machines/co...t been declared 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
 talComBusID::DIRECT_DRIVE_BTN,
 ^~~~~~~~~~~
src/machines/config/machines/volvo_A60H_bruder/inputs_map/ctrl_config.cpp:72:1:
 error: 'nst' does not name a type; did you mean 'init'?
 nst uint8_t kCtrlChainCount = sizeof(kCtrlChains) / sizeof(CtrlChain);
 ^~~
 init
Compiling C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volvo_A60H_bruder\FrameworkArduino\Esp.cpp.o
*** [C:\Users\Arnaud\AppData\Local\Temp\PlatformIO\build\Open_Node_RC_Core\volv
o_A60H_bruder\src\machines\config\machines\volvo_A60H_bruder\inputs_map\ctrl_co
nfig.cpp.o] Error 1
========================= [FAILED] Took 16.14 seconds =========================

Environment        Status    Duration
-----------------  --------  ------------
volvo_A60H_bruder  FAILED    00:00:16.142
==================== 1 failed, 0 succeeded in 00:00:16.142 ====================
